--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,10 +1,5 @@
-$font-family: barlow, sans-serif;
-$title-color: purple;
-$navbar-color: rebeccapurple;
-$navbar-font-size: 20px;
-
 * {
-	font-family: $font-family;
+	font-family: font-family;
 }
 
 body {
