--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ a:hover {
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
+.titulos {
+  display: flex;
+  margin: auto;
+  justify-content: left; }
+
 .titulo_h1 {
   display: flex;
   font-size: 55px;
@@ -74,3 +79,48 @@ p {
     line-height: 25px; }
 
 /* cierre footer*/
+/* inicio index */
+.imgindex {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  padding: 10px;
+  margin: 10px;
+  object-fit: cover;
+  transition: width 2s, height 2s; }
+
+.imgindex:hover {
+  width: 275px;
+  height: 275px; }
+
+/* cierre index */
+/* inicio tortas */
+.tortas {
+  display: grid;
+  margin: 40px 0px 0px 20px;
+  grid-template-columns: 390px 390px;
+  grid-template-rows: repeat 4, 200px;
+  grid-row-gap: 5px;
+  grid-column-gap: 10px; }
+
+.img-tortas {
+  height: 120px;
+  width: 120px;
+  object-fit: cover;
+  align-self: center;
+  border-radius: 15%;
+  transition-property: background, border-radius;
+  transition-duration: 1s;
+  transition-timing-function: linear; }
+
+.img-tortas:hover {
+  border-radius: 50%; }
+
+.info-tortas {
+  display: grid;
+  grid-template-columns: 120px 260px;
+  grid-template-rows: 150px;
+  grid-column-gap: 6px;
+  align-self: center; }
+
+/* cierre tortas */
