--- a/css/style.css
+++ b/css/style.css
@@ -122,5 +122,29 @@ p {
   grid-template-rows: 150px;
   grid-column-gap: 6px;
   align-self: center; }
+  .info-tortas span {
+    align-self: center; }
 
 /* cierre tortas */
+/* inicio cupcakes */
+.cupcakes {
+  display: grid;
+  grid-template-columns: 120px 400px;
+  grid-column-gap: 10px;
+  margin: 20px 0px 10px 10px; }
+  .cupcakes span {
+    align-self: center; }
+
+.img-cupcakes {
+  height: 120px;
+  width: 120px;
+  object-fit: cover;
+  border-radius: 15%;
+  transition-property: background, border-radius;
+  transition-duration: 1s;
+  transition-timing-function: linear; }
+
+.img-cupcakes:hover {
+  border-radius: 50%; }
+
+/* cierre cupcakes */
