--- a/scss/style.scss
+++ b/scss/style.scss
@@ -188,3 +188,14 @@ p {
     border-radius: 50%;
 }
 /* cierre cupcakes */
+
+/* inicio recetas */
+.recetas {
+display:grid;
+grid-template-columns: 700px;
+grid-template-rows: repeat (5, 350px);
+grid-row-gap: 10px;
+padding: 15px;
+width: 65%;
+}
+/* cierre recetas */
