--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 $font-family: barlow, sans-serif;
 $title-color: purple;
-$navbar-color: rebeccapurple;
+$primary-color: rebeccapurple;
 $navbar-font-size: 20px;
 $subtitle-font-size: 30px;
 $p-font-size: 1.2em;
@@ -50,7 +50,7 @@ body {
 
 a {
 text-decoration: none;
-color: $navbar-color;
+color: $primary-color;
 font-size: $navbar-font-size;
 font-weight: 800;
 }
@@ -199,3 +199,65 @@ padding: 15px;
 width: 65%;
 }
 /* cierre recetas */
+
+/* inicio contacto */
+iframe {
+	margin: 20px 10px;
+}
+
+.detalle-form {
+	margin-left: 10px;
+}
+
+.formulario {
+	background-color:white;
+	display:block;
+	width: 40%;
+  	padding: 12px 20px;
+  	margin: 8px 10px;
+  	box-sizing: border-box;
+	border:none;
+	border-radius: 4px;
+}
+
+.formulario:focus {
+	border: 3px solid $primary-color;
+}
+
+.formulario2 {
+	background-color:white;
+	display:block;
+	width: 40%;
+	height:120px;
+  	padding: 12px 20px;
+  	margin: 8px 10px;
+  	box-sizing: border-box;
+	border: none;
+	border-radius: 4px;
+}
+
+.formulario2:focus {
+	border: 3px solid $primary-color;
+}
+
+.formulario3 {
+	font-size: 18px;
+}
+
+input[type=submit], input[type=reset] {
+	background-color: rgb(147, 125, 169);
+	border: none;
+	border-radius: 4px;
+	color: white;
+	padding: 10px 10px;
+	text-decoration: none;
+	margin: 4px 10px;
+	cursor: pointer;
+  }
+
+.buttons{
+	display:flex;
+	width: 500px;
+	justify-content: end;
+}
+/* cierre contacto */
