--- a/scss/_medq.scss
+++ b/scss/_medq.scss
@@ -61,3 +61,23 @@
 		padding:5px;
 	}
 }	
+
+@media screen and (max-width: 480px) {
+	.cupcakes {
+	  display: grid;
+	  grid-template-columns: 80px 240px;
+	  margin: 10px 0px 5px 5px; }
+	.img-cupcakes {
+	  height: 80px;
+	  width: 80px;
+	  object-fit: cover;
+	  border-radius: 15%;
+	  transition-property: background, border-radius;
+	  transition-duration: 1s;
+	  transition-timing-function: linear; }
+	.img-cupcakes:hover {
+	  border-radius: 50%; }
+	span {
+	  align-self: center;
+	  font-size: 14px;
+	  width: 200px; } }
