--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
   padding: 20px 10px;
   grid-template-rows: 100px;
   grid-template-columns: 150px 150px 150px 150px 150px 150px; }
+  .header-container i {
+    display: none; }
 
 .logoppal {
   height: 80px;
@@ -33,6 +35,21 @@ a {
 
 a:hover {
   text-decoration: underline; }
+
+@media screen and (max-width: 768px) {
+  .logoppal {
+    height: 70px;
+    border-radius: 5px;
+    box-sizing: border-box; }
+  .header-container {
+    display: grid;
+    padding: 10px 5px;
+    grid-template-columns: 120px 40px 40px 40px 40px 40px; }
+    .header-container a {
+      display: none; }
+    .header-container i {
+      color: white;
+      width: 40px; } }
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
