--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,9 @@ a:hover {
     border-radius: 5px;
     box-sizing: border-box; }
   .header-container {
-    display: grid;
+    display: flex;
     padding: 10px 5px;
-    grid-template-columns: 120px 40px 40px 40px 40px 40px; }
+    flex-wrap: wrap; }
     .header-container a {
       display: none; }
     .header-container i {
