--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,7 +63,7 @@ text-decoration: underline;
 }
 
 @media screen and (max-width:768px) {
-	.logoppal {
+	.logo-respopnsive {
 		height: 70px;
 		border-radius: 5px;
 		box-sizing: border-box;
