--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,9 @@ body {
 	grid-template-columns: 150px 150px 150px 150px 150px 150px;
 	.header-responsive {
 		display:none;
+	.logo-responsive {
+		display:none;
+	}
 	}
 }
 
