--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
   grid-template-columns: 150px 150px 150px 150px 150px 150px; }
   .header-container .header-responsive {
     display: none; }
+    .header-container .header-responsive .logo-responsive {
+      display: none; }
 
 .logoppal {
   height: 80px;
