--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,12 +33,8 @@ body {
 	padding: 20px 10px;
 	grid-template-rows: 100px;
 	grid-template-columns: 150px 150px 150px 150px 150px 150px;
-	.header-responsive {
+	.header-responsive, .logo-responsive {
 		display:none;
-	
-	.logo-responsive {
-		display:none;
-	}
 	}
 }
 
