--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ a {
   color: rebeccapurple;
   font-size: 20px;
   font-weight: 800; }
+  a i {
+    display: none; }
 
 a:hover {
   text-decoration: underline; }
