--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a {
   font-size: 20px;
   font-weight: 800; }
   a i {
-    display: none; }
+    padding: 0px 2px; }
 
 a:hover {
   text-decoration: underline; }
