--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ a {
 a:hover {
   text-decoration: underline; }
 
+@media screen and (max-width: 768px) {
+  .nav-desktop {
+    display: none; } }
+
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
 .titulos {
