--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,13 @@ font-weight: 800;
 a:hover {
 text-decoration: underline;
 }
+
+@media screen and (max-width: 768px) {
+	.nav-desktop {
+		display:none;
+	}
+}
+
 /* cierre navbar y logo */
 
 /* inicio titulos y parrafo */
