--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,9 +63,24 @@ text-decoration: underline;
 }
 
 @media screen and (max-width: 768px) {
-	.nav-mobile {
+
+	.logoppal {
 		height: 70px;
-		width: 70px;
+		border-radius: 5px;
+		box-sizing: border-box;
+	}
+ 
+	.header-nav {
+		a {
+			.nav-mobile {
+				height: 70px;
+				width: 70px;
+			}
+			.nav-desktop {
+				display:none;
+			}
+		}
+
 	}
 }
 
