--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 a:hover {
   text-decoration: underline; }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .logoppal {
     height: 70px;
     border-radius: 5px;
