--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,7 +62,7 @@ a:hover {
 text-decoration: underline;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
 
 	.logoppal {
 		height: 70px;
