--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,12 +35,12 @@ body {
 	grid-template-columns: 160px 160px 160px 160px 160px 160px;
 }
 
- .logoppal {
+.logoppal {
 	height: 80px;
 	border-radius: 5px;
 	box-sizing: border-box;
 
-	@media screen (max-width:768px) {
+	@media screen and (max-width: 768px) {
 		height: 60px;
 		margin: 5px;
 	}
