--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ $image-width: 120px;
 	margin: 10px;
 }
 
+@import "responsive";
+
 * {
 	font-family: $font-family;
 }
@@ -32,18 +34,13 @@ body {
 	display: grid;
 	padding: 20px 10px;
 	grid-template-rows: 100px;
-	grid-template-columns: 160px 160px 160px 160px 160px 160px;
+	grid-template-columns: repeat (5, 150px);
 }
 
 .logoppal {
 	height: 80px;
 	border-radius: 5px;
 	box-sizing: border-box;
-
-	@media screen and (max-width: 768px) {
-		height: 60px;
-		margin: 5px;
-	}
 }
 
 .header-nav {
