--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -4,24 +4,22 @@
 	}
 	
 	/* inicio navbar y logo */
-    .logoppal {
-		height: 70px;
-		border-radius: 5px;
-		box-sizing: border-box;
-	}
- 
-	.header-container {
+  	.header-container {
 		display: grid;
-		padding: 10px 5px;
-		grid-template-rows: repeat (5 50px);
-		grid-template-columns: 120px;
-	}
- 
-	 .header-nav {
-		margin:10px;
-		padding: 0px;
-		justify-self: left;
-		align-self: left;
+		padding: 5px;
+		grid-template-rows: 60px 50px;
+		grid-template-columns: repeat (5, 80px);
+		.header-nav {
+			margin:5px;
+			padding: 0px;
+			justify-self: left;
+			align-self: left;
+			.logoppal {
+				height: 60px;
+				border-radius: 5px;
+				box-sizing: border-box;
+			}
+		}
 	}
 	
 	a {
