--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 768px) {
 	body {
-		background-color: #f597d9
+		background-color: #f597d9;
+		background-image: none;
 	}
 	
 	/* inicio navbar y logo */
