--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 768px) {
 	body {
-		background: #f597d9 url(https://img.freepik.com/fotos-premium/pila-malvaviscos-rosas-redondos-sobre-fondo-rosa-pastel-closeup_158417-723.jpg?w=2000) no-repeat center center fixed;
+		background-color: #f597d9;
+		background-image: none;
 	}
 	
 	/* inicio navbar y logo */
