--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -16,9 +16,11 @@
 			justify-self: left;
 			align-self: left;
 			.logoppal {
-				height: 60px;
+				height: 80px;
 				border-radius: 5px;
 				box-sizing: border-box;
+				align-items: center;
+				justify-content: center;
 			}
 		}
 	}
