--- a/css/style.css
+++ b/css/style.css
@@ -1,142 +1,3 @@
-@media screen and (max-width: 768px) {
-  body {
-    background-color: #f597d9;
-    background-image: none; }
-  /* inicio navbar y logo */
-  .header-container {
-    display: grid;
-    padding: 5px;
-    grid-template-rows: 60px 50px;
-    grid-template-columns: repeat 5, 80px; }
-    .header-container .header-nav {
-      margin: 5px;
-      padding: 0px;
-      justify-self: left;
-      align-self: left; }
-      .header-container .header-nav .logoppal {
-        height: 80px;
-        border-radius: 5px;
-        box-sizing: border-box;
-        align-items: center;
-        justify-content: center; }
-  a {
-    text-decoration: none;
-    color: rebeccapurple;
-    font-size: 20px;
-    font-weight: 800; }
-  a:hover {
-    text-decoration: underline; }
-  /* cierre navbar y logo */
-  /* inicio titulos y parrafo */
-  .titulos {
-    display: flex;
-    margin: auto;
-    justify-content: left; }
-  .titulo_h1 {
-    display: flex;
-    font-size: 55px;
-    padding: 10px;
-    margin: 0;
-    color: purple; }
-  .titulo_h2 {
-    display: flex;
-    color: purple;
-    align-items: center; }
-  .subtitulo {
-    text-align: left;
-    font-size: 30px;
-    padding: 10px;
-    margin: 10px 0px 0px 0px; }
-  p {
-    width: 750px;
-    text-align: left;
-    font-size: 1.2em;
-    padding: 10px;
-    margin: 0px; } }
-
-/*
-    .logoppal {
-       height: 70px;
-       border-radius: 5px;
-       box-sizing: border-box;
-   }
-
-   .header-container {
-       display: grid;
-       padding: 10px 5px;
-       grid-template-rows: repeat (5 50px);
-       grid-template-columns: 120px;
-   }
-
-    .header-nav {
-       margin:10px;
-       padding: 0px;
-       justify-self: left;
-       align-self: left;
-   }
-}
-
-@media screen and (max-width: 768px){
-	.index-info {
-		display:grid;
-		grid-template-columns: 320px;
-		grid-template-rows: 50px 45px;
-		margin:5px;
-		justify-content: left;
-	}
-
-	.titulo_h1 {
-		font-size:40px;
-		padding:7px;
-		margin:5px;
-		padding: 0px;
-		color: purple;
-		place-self: center left;
-	}
-	
-	.titulo_h2 {
-		font-size: 25px;
-		justify-content: center;
-		color: purple;
-		place-self: center left;
-		margin:5px;
-	}
-	
-	.subtitulo {
-		text-align: left;
-		font-size: 20px;
-		padding:5px;
-		margin:5px 0px 0px 5px;
-	}
-	
-	p {
-		width: 270px;
-		text-align:left;
-		font-size:15px;
-		margin: 5px;
-		padding:5px;
-	}
-}	
-
-@media screen and (max-width: 480px) {
-	.cupcakes {
-	  display: grid;
-	  grid-template-columns: 80px 240px;
-	  margin: 10px 0px 5px 5px; }
-	.img-cupcakes {
-	  height: 80px;
-	  width: 80px;
-	  object-fit: cover;
-	  border-radius: 15%;
-	  transition-property: background, border-radius;
-	  transition-duration: 1s;
-	  transition-timing-function: linear; }
-	.img-cupcakes:hover {
-	  border-radius: 50%; }
-	span {
-	  align-self: center;
-	  font-size: 14px;
-	  width: 200px; } } */
 * {
   font-family: barlow, sans-serif; }
 
@@ -352,3 +213,143 @@ input[type=submit], input[type=reset] {
   justify-content: end; }
 
 /* cierre contacto */
+/* responsive */
+@media screen and (max-width: 768px) {
+  body {
+    background-color: #f597d9;
+    background-image: none; }
+  /* inicio navbar y logo */
+  .header-container {
+    display: grid;
+    padding: 5px;
+    grid-template-rows: 60px 50px;
+    grid-template-columns: repeat 5, 80px; }
+    .header-container .header-nav {
+      margin: 5px;
+      padding: 0px;
+      justify-self: left;
+      align-self: left; }
+      .header-container .header-nav .logoppal {
+        height: 80px;
+        border-radius: 5px;
+        box-sizing: border-box;
+        align-items: center;
+        justify-content: center; }
+  a {
+    text-decoration: none;
+    color: rebeccapurple;
+    font-size: 20px;
+    font-weight: 800; }
+  a:hover {
+    text-decoration: underline; }
+  /* cierre navbar y logo */
+  /* inicio titulos y parrafo */
+  .titulos {
+    display: flex;
+    margin: auto;
+    justify-content: left; }
+  .titulo_h1 {
+    display: flex;
+    font-size: 55px;
+    padding: 10px;
+    margin: 0;
+    color: purple; }
+  .titulo_h2 {
+    display: flex;
+    color: purple;
+    align-items: center; }
+  .subtitulo {
+    text-align: left;
+    font-size: 30px;
+    padding: 10px;
+    margin: 10px 0px 0px 0px; }
+  p {
+    width: 750px;
+    text-align: left;
+    font-size: 1.2em;
+    padding: 10px;
+    margin: 0px; } }
+
+/*
+    .logoppal {
+       height: 70px;
+       border-radius: 5px;
+       box-sizing: border-box;
+   }
+
+   .header-container {
+       display: grid;
+       padding: 10px 5px;
+       grid-template-rows: repeat (5 50px);
+       grid-template-columns: 120px;
+   }
+
+    .header-nav {
+       margin:10px;
+       padding: 0px;
+       justify-self: left;
+       align-self: left;
+   }
+}
+
+@media screen and (max-width: 768px){
+	.index-info {
+		display:grid;
+		grid-template-columns: 320px;
+		grid-template-rows: 50px 45px;
+		margin:5px;
+		justify-content: left;
+	}
+
+	.titulo_h1 {
+		font-size:40px;
+		padding:7px;
+		margin:5px;
+		padding: 0px;
+		color: purple;
+		place-self: center left;
+	}
+	
+	.titulo_h2 {
+		font-size: 25px;
+		justify-content: center;
+		color: purple;
+		place-self: center left;
+		margin:5px;
+	}
+	
+	.subtitulo {
+		text-align: left;
+		font-size: 20px;
+		padding:5px;
+		margin:5px 0px 0px 5px;
+	}
+	
+	p {
+		width: 270px;
+		text-align:left;
+		font-size:15px;
+		margin: 5px;
+		padding:5px;
+	}
+}	
+
+@media screen and (max-width: 480px) {
+	.cupcakes {
+	  display: grid;
+	  grid-template-columns: 80px 240px;
+	  margin: 10px 0px 5px 5px; }
+	.img-cupcakes {
+	  height: 80px;
+	  width: 80px;
+	  object-fit: cover;
+	  border-radius: 15%;
+	  transition-property: background, border-radius;
+	  transition-duration: 1s;
+	  transition-timing-function: linear; }
+	.img-cupcakes:hover {
+	  border-radius: 50%; }
+	span {
+	  align-self: center;
+	  font-size: 14px;
+	  width: 200px; } } */
