--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 768px) {
 	body {
-		background-color: #f597d9;
+		background-color: #f4c3e5;
 		background-image: none;
 	}
 	
