--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,11 @@ body {
 	background-size: cover;
 	position: relative;
 	padding:0;
+
+	@media screen and (max-width: 768px) {
+		background-color:rgb(239, 185, 231);
+		background-image: none;
+	}
 }
 
 /* inicio navbar y logo */
