--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   padding: 0; }
   @media screen and (max-width: 768px) {
     body {
-      background-color: #efb9e7;
+      background-color: #f9ebea;
       background-image: none; } }
 
 /* inicio navbar y logo */
