--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,7 @@ body {
 	padding:0;
 
 	@media screen and (max-width: 768px) {
-		background-color:rgb(239, 185, 231);
+		background-color: #fadbd8;
 		background-image: none;
 	}
 }
