--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   padding: 0; }
   @media screen and (max-width: 768px) {
     body {
-      background-color: #fadbd8;
+      background-color: #ffcdd2;
       background-image: none; } }
 
 /* inicio navbar y logo */
