--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,13 @@ body {
 	padding: 20px 10px;
 	grid-template-rows: 100px;
 	grid-template-columns: 150px 150px 150px 150px 150px 150px;
+
+	@media screen and (max-width: 768px){
+		display: grid;
+		padding: 5px;
+		grid-template-columns: repeat (7, 70px);
+	}
+		
 	.header-nav {
     	margin:20px;
     	padding: 0px;
