--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,6 @@ body {
   padding: 20px 10px;
   grid-template-rows: 100px;
   grid-template-columns: 150px 150px 150px 150px 150px 150px; }
-  @media screen and (max-width: 768px) {
-    .header-container {
-      display: grid;
-      padding: 5px;
-      grid-template-columns: repeat 7, 70px; } }
   .header-container .header-nav {
     margin: 20px;
     padding: 0px;
@@ -40,6 +35,12 @@ body {
       font-weight: 800; }
     .header-container .header-nav a:hover {
       text-decoration: underline; }
+
+@media screen and (max-width: 768px) {
+  .header-container {
+    display: grid;
+    padding: 5px;
+    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px; } }
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
