--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,8 @@ body {
   @media screen and (max-width: 768px) {
     .titulo_h2 {
       padding: 5px;
-      justify-items: center; } }
+      justify-items: center;
+      margin: 0px; } }
 
 .subtitulo {
   text-align: left;
