--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ body {
   justify-content: left; }
   @media screen and (max-width: 768px) {
     .titulos {
-      display: grid;
-      grid-template-rows: 60px 60px;
+      display: flex;
+      flex-direction: column;
       align-content: center;
       justify-content: center; } }
 
@@ -73,7 +73,6 @@ body {
   align-items: center; }
   @media screen and (max-width: 768px) {
     .titulo_h2 {
-      display: none;
       padding: 5px;
       justify-items: center;
       margin: 0px; } }
