--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ body {
   @media screen and (max-width: 768px) {
     .titulos {
       display: flex;
-      flex-direction: column; } }
+      flex-direction: column;
+      justify-content: center; } }
 
 .titulo_h1 {
   display: flex;
@@ -61,7 +62,7 @@ body {
   color: purple; }
   @media screen and (max-width: 768px) {
     .titulo_h1 {
-      font-size: 45px;
+      font-size: 40px;
       padding: 5px;
       justify-items: center; } }
 
@@ -71,7 +72,7 @@ body {
   align-items: center; }
   @media screen and (max-width: 768px) {
     .titulo_h2 {
-      font-size: 35px;
+      font-size: 30px;
       padding: 5px;
       justify-items: center;
       margin: 0px; } }
