--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,7 @@ body {
 	@media screen and (max-width: 768px) {
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
 	}
 }
 
@@ -93,7 +94,7 @@ body {
 	color: $title-color;
 	
 	@media screen and (max-width: 768px) {
-		font-size: 45px;
+		font-size: 40px;
 		padding: 5px;
 		justify-items: center;
 	}
@@ -105,7 +106,7 @@ body {
 	align-items: center;
 
 	@media screen and (max-width: 768px) {
-		font-size: 35px;
+		font-size: 30px;
 		padding: 5px;
 		justify-items: center;
 		margin: 0px;
