--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,7 +108,7 @@ body {
 	@media screen and (max-width: 768px) {
 		font-size: 30px;
 		padding: 5px;
-		justify-items: center;
+		text-align: center;
 		margin: 0px;
 	}
 }
