--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,6 +106,8 @@ body {
 	align-items: center;
 
 	@media screen and (max-width: 768px) {
+		display: inline-block;
+		width: 100%;
 		font-size: 30px;
 		padding: 5px;
 		text-align: center;
