--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ p {
       display: inline-block;
       width: 100%;
       text-align: center;
-      padding: 5px; } }
+      padding: 5px;
+      margin: 10px 0px 0px 0px; } }
 
 /* cierre titulos y parrafo */
 /* inicio footer */
