--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,6 +134,7 @@ p {
 
 	@media screen and (max-width: 768px) {
 		@include displaytitulos;
+		margin: 10px 0px 0px 0px;
 	}
 }
 /* cierre titulos y parrafo */
