--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,15 @@ p {
   width: 275px;
   height: 275px; }
 
+@media screen and (max-width: 768px) {
+  .infoindex {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    justify-content: center;
+    align-content: center; } }
+
 /* cierre index */
 /* inicio tortas */
 .tortas {
