--- a/scss/style.scss
+++ b/scss/style.scss
@@ -150,6 +150,10 @@ p {
 	margin: 0px 5x;
 	line-height: 25px;
 	}
+
+	@media screen and (max-width: 768px) {
+		width: 100%;
+	}
 }
 /* cierre footer*/
 
