--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* inicio body */
 * {
   font-family: barlow, sans-serif; }
 
@@ -11,6 +12,7 @@ body {
       background-color: #ffcdd2;
       background-image: none; } }
 
+/* cierre body */
 /* inicio navbar y logo */
 .header-container {
   display: grid;
@@ -40,7 +42,9 @@ body {
   .header-container {
     display: grid;
     padding: 5px;
-    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px; } }
+    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px; }
+    .header-container .grid-item:first-child {
+      grid-column: 1/8; } }
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
