--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@ body {
   .header-container {
     display: grid;
     padding: 5px;
-    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px; }
+    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px;
+    grid-template-rows: 80px 80px; }
     .header-container .grid-item:first-child {
       grid-column: 1/8; } }
 
