--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,9 @@ body {
       text-decoration: underline; }
 
 @media screen and (max-width: 768px) {
-  .header-container {
-    display: grid;
-    padding: 5px;
-    grid-template-columns: 70px 70px 70px 70px 70px 70px 70px;
-    grid-template-rows: 80px 80px; }
-    .header-container .grid-item:first-child {
-      grid-column: 1/8; } }
+  .logoppal {
+    display: flex;
+    justify-content: center; } }
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
