--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,6 +85,10 @@ body {
 	}
 
 	.header-nav {
+		margin:20px;
+    	padding: 0px;
+    	justify-self: center;
+    	align-self: center;
 		.nav-desktop {
 			display: none;
 		}
