--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,16 @@ body {
   .logoppal {
     display: flex;
     justify-content: center; }
-  .header-nav .nav-desktop {
-    display: none; }
-  .header-nav .nav-mobile {
-    display: block;
-    height: 70px; } }
+  .header-nav {
+    margin: 20px;
+    padding: 0px;
+    justify-self: center;
+    align-self: center; }
+    .header-nav .nav-desktop {
+      display: none; }
+    .header-nav .nav-mobile {
+      display: block;
+      height: 70px; } }
 
 /* cierre navbar y logo */
 /* inicio titulos y parrafo */
