--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ body {
       text-decoration: underline; }
 
 @media screen and (max-width: 768px) {
+  .header-container {
+    width: 100%; }
   .logoppal {
     display: flex;
     justify-content: center; }
