--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {
 
 .titulo_h1 {
   display: flex;
-  font-size: 60px;
+  font-size: 55px;
+  font-weight: 400;
   padding: 10px;
   margin: 0;
   color: purple; }
