--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,7 +119,8 @@ body {
 
 .titulo_h1 {
 	display:flex;
-	font-size:60px;
+	font-size:55px;
+	font-weight: 400;
 	padding: $padding-titles;
 	margin:0;
 	color: $title-color;
