--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,6 +134,7 @@ body {
 	display:flex;
 	color: $title-color;
 	align-items: center;
+	padding: 0px;
 
 	@media screen and (max-width: 768px) {
 		@include displaytitulos;
