--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ body {
 .titulo_h1 {
   display: flex;
   font-size: 55px;
-  font-weight: 400;
   padding: 10px;
   margin: 0;
   color: purple; }
@@ -85,7 +84,8 @@ body {
 .titulo_h2 {
   display: flex;
   color: purple;
-  align-items: center; }
+  align-items: center;
+  padding: 0px; }
   @media screen and (max-width: 768px) {
     .titulo_h2 {
       display: inline-block;
