--- a/scss/style.scss
+++ b/scss/style.scss
@@ -117,7 +117,7 @@ body {
 	}
 }
 
-.titulo_h1 {
+.titulo-h1 {
 	display:flex;
 	font-size:55px;
 	padding: $padding-titles;
@@ -130,7 +130,7 @@ body {
 	}
 }
 
-.titulo_h2 {
+.titulo-h2 {
 	display:flex;
 	color: $title-color;
 	align-items: center;
