--- a/css/style.css
+++ b/css/style.css
@@ -67,27 +67,27 @@ body {
       flex-direction: column;
       justify-content: center; } }
 
-.titulo_h1 {
+.titulo-h1 {
   display: flex;
   font-size: 55px;
   padding: 10px;
   margin: 0;
   color: purple; }
   @media screen and (max-width: 768px) {
-    .titulo_h1 {
+    .titulo-h1 {
       display: inline-block;
       width: 100%;
       text-align: center;
       padding: 5px;
       font-size: 40px; } }
 
-.titulo_h2 {
+.titulo-h2 {
   display: flex;
   color: purple;
   align-items: center;
   padding: 0px; }
   @media screen and (max-width: 768px) {
-    .titulo_h2 {
+    .titulo-h2 {
       display: inline-block;
       width: 100%;
       text-align: center;
