--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,7 +40,7 @@ body {
 	padding:0;
 
 	@media screen and (max-width: 768px) {
-		background-color: #ffcdd2;
+		background-color: #ffcdd2 !important;
 		background-image: none;
 	}
 }
