--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
       font-size: 30px;
       margin: 0px; } }
 
-.subtitulo {
+.subtitulo1 {
   text-align: left;
   font-size: 30px;
   padding: 10px;
