--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ body {
   text-align: left;
   font-size: 30px;
   padding: 10px;
-  margin: 10px 0px 0px 0px; }
+  margin: 10px 0px 0px 0px;
+  text-decoration: solid; }
 
 p {
   width: 750px;
