--- a/scss/style.scss
+++ b/scss/style.scss
@@ -149,6 +149,7 @@ body {
 	font-size: $subtitle-font-size;
 	padding: $padding-titles;
 	margin:10px 0px 0px 0px;
+	text-decoration: solid;
 }
 
 p {
