--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,7 @@ body {
   text-align: left;
   font-size: 30px;
   padding: 10px;
-  margin: 10px 0px 0px 0px;
-  text-decoration: solid !important; }
+  margin: 10px 0px 0px 0px; }
 
 p {
   width: 750px;
