--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@ body {
 }
 /* cierre body */
 
-/* inicio navbar y logo */
+/* inicio navbar y logo
 .header-container {
 	display: grid;
 	padding: 20px 10px;
@@ -102,7 +102,7 @@ body {
 		}
 	}
 }
-/* cierre navbar y logo */
+cierre navbar y logo */
 
 /* inicio titulos y parrafo */
 .titulos {
